# Audio-Recorder

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Recorder.cmake  config.json
CLI/: CMakeLists.txt  README.md
CLI/src/: Recorder.h  main.cpp
GUI/: CMakeLists.txt  README.md  Recorder.cmake  config.json
GUI/lib/serial/: README.md
GUI/lib/serial/impl/: win.h
GUI/resource/: README.md
GUI/src/: Config.h  JsonConfig.h  KInput.h  KParam.h  KRecordPlot.cpp  KRecordPlot.h  KRecordPlot_rec.cpp  KRecordPlot_rec.h  KRecorder.cpp  KRecorder.h  KRecorderControl.cpp  KRecorderControl.h  ParamComboBox.h  ParamLineEdit.h  main.cpp  main_recorder.cpp
doc/: multi-channel_recording.pptx
lib/serial/: serial.cmake  serial.h
lib/serial/impl/: win.cc
src/: KInput.h  KRecordPlot.cpp  KRecordPlot.h  KRecorder.cpp  KRecorder.h  KRecorderControl.cpp  KRecorderControl.h  WidgetPort.cpp  WidgetPort.h  main.cpp
